--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -15,6 +15,6 @@ block content
 
         .form-group
             label(for="password") PassWord :&nbsp;
-            input#password.form-control(name="password",type="text"
+            input#password.form-control(name="password",type="password"
             value=values ? values.password : "")
         button.btn.btn-primary Login
