--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -9,8 +9,10 @@ html
             //- a.navbar-brand(href='#') Contact
             form.form-inline(action="#" method="GET")
                 input.form-control.mr-sm-2(type='search', placeholder='Search', aria-label='Search')
-                button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
+                button.btn.btn-outline-success.my-2.my-sm-0 Search
 
+            if user
+                p= user.name
         .contrainer.pt-5
             block content
     
