--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,4 @@ block content
     h1 Hello #{name} 
     //- name là key được khai báo bên Pug
     a(href="/users") User List
-    img(src="/images/mon.jpg")
+    img(src="../images/mon.jpg")
