--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -1,7 +1,7 @@
 html
     head
         link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
-        link(rel="stylesheet", href="style/custum.css")
+        link(rel="stylesheet", href="../public/style/custum.css")
     body
         nav.navbar.navbar-light.bg-light
             a.navbar-brand(href='/') Home
