--- a/views/products/index.pug
+++ b/views/products/index.pug
@@ -3,22 +3,22 @@ extends ../layouts/common
 block content
     h1 User
     .d-flex.align-items-center
-        a.btn.btn-primary(href="/users/create") New
 
         form.ml-auto(action="/users/search" method="GET", class="d-flex")
             input(type="text" name="q" class="form-control mb-2")
-            button(class="btn btn-primary ml-2") 
+            button(class="btn btn-primary ml-2") Search
             
     table.table
         tr
             th Name
+            th Giá
             th Image
             th Description
-        each product in products 
+        each product in products
             //- li= user.name
             tr
                 td= product.name
-                td= product.image 
+                td= product.price
+                td
+                 img(src= product.image)
                 td= product.description
-        //- each product in products
-        //-     span= product.name
