--- a/views/products/index.pug
+++ b/views/products/index.pug
@@ -6,19 +6,76 @@ block content
 
         form.ml-auto(action="/users/search" method="GET", class="d-flex")
             input(type="text" name="q" class="form-control mb-2")
-            button(class="btn btn-primary ml-2") Search
-            
-    table.table
-        tr
-            th Name
-            th Giá
-            th Image
-            th Description
+            button(class="btn btn-primary ml-2") Search 
+    br
+    .row(style='padding:10px;text-align:center; ')
         each product in products
-            //- li= user.name
-            tr
-                td= product.name
-                td= product.price
-                td
-                 img(src= product.image)
-                td= product.description
+            .col-sm-4(style='background-color:yellow;padding:5px;')
+                b=product.name
+                br
+                span= product.price
+                br
+                img(src= product.image)
+                br
+                span= product.description
+                br
+                .btn.btn-primary Add to cart
+
+    ul.ml-auto(class="pagination pagination-sm")
+        li(class="page-item")
+            a(class="page-link" href="#") Previous
+        li(class="page-item")
+            a(class="page-link" href="#") 1
+        li(class="page-item")
+            a(class="page-link" href="#") 2
+        li(class="page-item")
+            a(class="page-link" href="#") 3
+        li(class="page-item")
+            a(class="page-link" href="#") Next
+            //- .col-sm(style='background-color:orange;padding:5px;')
+            //-     b=product.name
+            //-     br
+            //-     span= product.price
+            //-     br
+            //-     img(src= product.image)
+            //-     br
+            //-     span= product.description
+            //-     br
+            //-     .btn.btn-primary Add to cart
+            //- .col-sm(style='background-color:yellow;padding:5px;')
+            //-     b=product.name
+            //-     br
+            //-     span= product.price
+            //-     br
+            //-     img(src= product.image)
+            //-     br
+            //-     span= product.description
+            //-     br
+            //-     .btn.btn-primary Add to cart
+            //- .col-sm(style='background-color:orange;padding:5px;')
+            //-     b=product.name
+            //-     br
+            //-     span= product.price
+            //-     br
+            //-     img(src= product.image)
+            //-     br
+            //-     span= product.description
+            //-     br
+            //-     .btn.btn-primary Add to cart
+
+            //- ////////////////////
+            //- table.table
+            //-     tr
+            //-         th Name
+            //-         th Giá
+            //-         th Image
+            //-         th Description
+            //-     each product in products
+            //-         tr
+            //-             td= product.name
+            //-             td= product.price
+            //-             td
+            //-              img(src= product.image)
+            //-             td= product.description
+            //-             //- //////////////
+                                                                
