--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
-extends ../layouts/common
+//- extends ../layouts/common
 
 block content
-    h1 Hello #{name} 
+    h1  #{name} Xin chào
     //- name là key được khai báo bên Pug
     a(href="/users") User List
     img(src="../images/mon.jpg")
